--- a/package.json
+++ b/package.json
@@ -1,16 +1,61 @@
 {
-  "name": "product-manager-api",
-  "version": "0.0.0",
-  "private": true,
+  "name": "fahasa",
+  "version": "1.0.0",
+  "description": "express nodejs ",
+  "main": "./src/index.ts",
   "scripts": {
-    "start": "node ./bin/www"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "SET NODE_ENV=production&& node ./build/index.js",
+    "build": "tsc -p .",
+    "dev": "SET NODE_ENV=development&& nodemon ./src/index.ts"
   },
+  "keywords": [
+    "express",
+    "nodejs"
+  ],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "@types/config": "0.0.39",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.12",
+    "@types/ejs": "^3.0.7",
+    "@types/express": "^4.17.13",
+    "@types/express-rate-limit": "^5.1.3",
+    "@types/express-session": "^1.17.4",
+    "@types/hpp": "^0.2.2",
+    "@types/morgan": "^1.9.3",
+    "@types/mysql": "^2.15.19",
+    "@types/node": "^16.3.1",
+    "@types/passport": "^1.0.7",
+    "@types/passport-google-oauth20": "^2.0.9",
+    "@types/util.promisify": "^1.0.4",
+    "bcrypt": "^5.0.1",
+    "config": "^3.3.6",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "express-rate-limit": "^5.3.0",
+    "express-session": "^1.17.2",
+    "helmet": "^4.6.0",
+    "hpp": "^0.2.3",
+    "mongoose": "^5.13.7",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.12",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
+    "simple-json-db": "^1.2.3",
+    "ts-node": "^10.1.0",
+    "util": "^0.12.4",
+    "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.0.2",
+    "jest": "^27.3.1",
+    "ts-jest": "^27.0.7",
+    "typescript": "^4.4.4"
   }
 }
